--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,28 +1,34 @@
-name: Deploy to GitHub Pages
+name: Deploy Angular App to GitHub Pages
 
 on:
   push:
-    branches: [main]
+    branches:
+      - main  # or "master" if that’s your default branch
+
+permissions:
+  contents: write  # Required to push to gh-pages
 
 jobs:
-  deploy:
+  build-deploy:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
-      
-      - name: Setup Node
-        uses: actions/setup-node@v3
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
-          node-version: 18.x
-          
-      - name: Install dependencies
+          node-version: '18'
+
+      - name: Install Dependencies
         run: npm install
-      
-      - name: Build
-        run: npm run build -- --configuration production --base-href "/Tamweel/"
-      
-      - name: Deploy
-        uses: peaceiris/actions-gh-pages@v3
+
+      - name: Build Angular App
+        run: npm run build -- --configuration production
+
+      - name: Deploy to GitHub Pages
+        uses: JamesIves/github-pages-deploy-action@v4
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist/Tamweel
+          branch: gh-pages
+          folder: dist/Tamweel
