--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "dev:ssr": "ng run Tamweel:serve-ssr",
+    "serve:ssr": "node dist/Tamweel/server/main.js",
+    "build:ssr": "ng build && ng run Tamweel:server",
+    "prerender": "ng run Tamweel:prerender"
   },
   "private": true,
   "dependencies": {
@@ -19,11 +23,14 @@
     "@angular/material": "^15.2.9",
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
+    "@angular/platform-server": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@nguniversal/express-engine": "^15.2.1",
     "angular-cli-ghpages": "^2.0.3",
     "animate.css": "^4.1.1",
     "bootstrap": "^5.3.7",
     "bootstrap-icons": "^1.13.1",
+    "express": "^4.15.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
@@ -32,7 +39,10 @@
     "@angular-devkit/build-angular": "^15.2.11",
     "@angular/cli": "~15.2.11",
     "@angular/compiler-cli": "^15.2.0",
+    "@nguniversal/builders": "^15.2.1",
+    "@types/express": "^4.17.0",
     "@types/jasmine": "~4.3.0",
+    "@types/node": "^14.15.0",
     "gh-pages": "^6.3.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
