--- a/angular.json
+++ b/angular.json
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/Tamweel/browser",
+            "outputPath": "dist/Tamweel",
             "baseHref": "/Tamweel/",
             "index": "src/index.html",
             "main": "src/main.ts",
