--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --output-path docs --base-href /Tamweel/ && cp src/robots.txt docs/ && cp src/sitemap.xml docs/",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "dev:ssr": "ng run Tamweel:serve-ssr",
+    "build:ssr": "ng build && ng run Tamweel:server:production",
     "serve:ssr": "node dist/Tamweel/server/main.js",
-    "build:ssr": "ng build && ng run Tamweel:server",
     "prerender": "ng run Tamweel:prerender"
   },
   "private": true,
@@ -40,9 +40,9 @@
     "@angular/cli": "~15.2.11",
     "@angular/compiler-cli": "^15.2.0",
     "@nguniversal/builders": "^15.2.1",
-    "@types/express": "^4.17.0",
+    "@types/express": "^4.17.23",
     "@types/jasmine": "~4.3.0",
-    "@types/node": "^14.15.0",
+    "@types/node": "^14.18.63",
     "gh-pages": "^6.3.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
