--- a/package.json
+++ b/package.json
@@ -2,18 +2,18 @@
   "name": "tamweel",
   "version": "0.0.0",
   "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "dev:ssr": "ng run Tamweel:serve-ssr",
-    "build:ssr": "ng build && ng run Tamweel:server:production",
-    "serve:ssr": "node dist/Tamweel/server/main.js",
-    "prerender": "ng run Tamweel:prerender",
-      "build": "ng build --configuration production",
-  "postbuild": "cp src/robots.txt dist/Tamweel/ && cp src/sitemap.xml dist/Tamweel/ && cp src/google*.html dist/Tamweel/",
-  "deploy": "npx angular-cli-ghpages --dir=dist/Tamweel --no-silent"
-  },
+  "ng": "ng",
+  "start": "ng serve",
+  "watch": "ng build --watch --configuration development",
+  "test": "ng test",
+  "dev:ssr": "ng run Tamweel:serve-ssr",
+  "build:ssr": "ng build && ng run Tamweel:server:production",
+  "serve:ssr": "node dist/Tamweel/server/main.js",
+  "prerender": "ng run Tamweel:prerender",
+  "build": "ng build --configuration production --base-href /Tamweel/",
+  "postbuild": "cp src/robots.txt dist/Tamweel/browser/ && cp src/sitemap.xml dist/Tamweel/browser/ && cp src/google*.html dist/Tamweel/browser/",
+  "deploy": "npx angular-cli-ghpages --dir=dist/Tamweel/browser --no-silent"
+},
   "private": true,
   "dependencies": {
     "@angular/animations": "^15.2.0",
