--- a/package.json
+++ b/package.json
@@ -2,18 +2,18 @@
   "name": "tamweel",
   "version": "0.0.0",
   "scripts": {
-  "ng": "ng",
-  "start": "ng serve",
-  "watch": "ng build --watch --configuration development",
-  "test": "ng test",
-  "dev:ssr": "ng run Tamweel:serve-ssr",
-  "build:ssr": "ng build && ng run Tamweel:server:production",
-  "serve:ssr": "node dist/Tamweel/server/main.js",
-  "prerender": "ng run Tamweel:prerender",
-  "build": "ng build --configuration production --base-href /Tamweel/",
-  "postbuild": "cp src/robots.txt dist/Tamweel/browser/ && cp src/sitemap.xml dist/Tamweel/browser/ && cp src/google*.html dist/Tamweel/browser/",
-  "deploy": "npx angular-cli-ghpages --dir=dist/Tamweel/browser --no-silent"
-},
+    "ng": "ng",
+    "start": "ng serve",
+    "watch": "ng build --watch --configuration development",
+    "test": "ng test",
+    "dev:ssr": "ng run Tamweel:serve-ssr",
+    "build:ssr": "ng build && ng run Tamweel:server:production",
+    "serve:ssr": "node dist/Tamweel/server/main.js",
+    "prerender": "ng run Tamweel:prerender",
+    "build": "ng build --configuration production --base-href /Tamweel/",
+    "postbuild": "cp src/robots.txt dist/Tamweel/browser/ && cp src/sitemap.xml dist/Tamweel/browser/ && cp src/google*.html dist/Tamweel/browser/",
+    "deploy": "npx angular-cli-ghpages --dir=dist/Tamweel/browser --no-silent"
+  },
   "private": true,
   "dependencies": {
     "@angular/animations": "^15.2.0",
@@ -32,6 +32,7 @@
     "animate.css": "^4.1.1",
     "bootstrap": "^5.3.7",
     "bootstrap-icons": "^1.13.1",
+    "emailjs-com": "^3.2.0",
     "express": "^4.15.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
